validation of email uniqueness and appropriate role value

--- a/public/personsView.html
+++ b/public/personsView.html
@@ -7,19 +7,19 @@
                 <th>&nbsp;</th>
                 <th>Rola</th> 
                 <th>Email</th>
+                <th>Haslo</th>
                 <th>Imię</th>
                 <th>Nazwisko</th>
                 <th>Rok</th>
-                <th>Kwota</th>
             </tr>
             <tr ng-repeat="person in ctrl.persons" ng-click="ctrl.select($index)" ng-class="{ 'rowSelected': ctrl.selected == $index }">
                 <td ng-bind="$index == ctrl.selected ? '»' : ''"></td>
                 <td ng-bind="person.role"></td>
                 <td ng-bind="person.email"></td>
+                <td ng-bind="person.password"></td>
                 <td ng-bind="person.firstName"></td>
                 <td ng-bind="person.lastName"></td>
                 <td ng-bind="person.year"></td>
-                <td ng-bind="person.amount"></td>
             </tr>
         </table>
     </div>
@@ -29,8 +29,13 @@
     <div class="panel-heading">Zmień</div>
     <div class="panel-body">
         <form class="form form-inline">
-            <input class="form-control" type="number" ng-model="ctrl.person.role"/>
-            <input class="form-control" type="text" ng-model="ctrl.person.email"/>            
+            <select class="form-control" type="number" ng-model="ctrl.person.role">
+                <option>2</option>
+                <option>1</option>
+                <option>3</option>
+            </select>
+            <input class="form-control" type="email" ng-model="ctrl.person.email"/> 
+            <input class="form-control" type="text" ng-model="ctrl.person.password"/>            
             <input class="form-control" type="text" ng-model="ctrl.person.firstName"/>
             <input class="form-control" type="text" ng-model="ctrl.person.lastName"/>
             <input class="form-control" type="number" ng-model="ctrl.person.year"/>
@@ -46,8 +51,13 @@
     <div class="panel-heading">Dodaj</div>
     <div class="panel-body">
         <form class="form form-inline">
-            <input class="form-control" type="number" ng-model="ctrl.newPerson.role"/>
-            <input class="form-control" type="text" ng-model="ctrl.newPerson.email"/>
+            <select class="form-control" type="number" ng-model="ctrl.newPerson.role">
+                <option>2</option>
+                <option>1</option>
+                <option>3</option>
+            </select>
+            <input class="form-control" type="email" ng-model="ctrl.newPerson.email"/>
+            <input class="form-control" type="text" ng-model="ctrl.newPerson.password"/>
             <input class="form-control" type="text" ng-model="ctrl.newPerson.firstName"/>
             <input class="form-control" type="text" ng-model="ctrl.newPerson.lastName"/>
             <input class="form-control" type="number" ng-model="ctrl.newPerson.year"/>
