confirm dialog; password generator

--- a/public/personsView.html
+++ b/public/personsView.html
@@ -40,8 +40,9 @@
             <input class="form-control" type="text" ng-model="ctrl.person.lastName"/>
             <input class="form-control" type="number" ng-model="ctrl.person.year"/>
             <button class="btn btn-success" ng-click="ctrl.updateData()">Zmień</button>
-            <button class="btn btn-danger" ng-click="ctrl.deleteData()">Usuń</button>
+            <button class="btn btn-danger" ng-really-message="Are you sure?" ng-really-click="ctrl.deleteData()">Usuń</button>
         </form>
+            
     </div>
 </div>
 
@@ -61,6 +62,7 @@
             <input class="form-control" type="text" ng-model="ctrl.newPerson.firstName"/>
             <input class="form-control" type="text" ng-model="ctrl.newPerson.lastName"/>
             <input class="form-control" type="number" ng-model="ctrl.newPerson.year"/>
+          
             <button class="btn btn-primary" ng-click="ctrl.insertNewData()">Utwórz</button>
         </form>
     </div>
