--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="node_modules/bootstrap3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/bootstrap3/dist/js/bootstrap.min.js"></script>
