--- a/public/index.html
+++ b/public/index.html
@@ -66,5 +66,6 @@
         <script src="js/personsCtrl.js"></script>
         <script src="js/transfersCtrl.js"></script>
         <script src="js/groupsCtrl.js"></script>
+        <script src="js/changePasswordCtrl.js"></script>
     </body>
 </html>
