--- a/public/homeView.html
+++ b/public/homeView.html
@@ -1,48 +1,1 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="text-center">Password Generator</h1>
-        </div>
-    </div>
-    <div class="row">
-         <div class="col-lg-12">
-            <form>
-                <div class="form-group">
-                  <label for="param-1">Password length (<span id="password-length">10</span>)</label>
-                  <input type="range" class="form-control" id="param-1" value="10" max="50">
-                </div>
-
-                <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="param-2" checked> Numbers
-                    </label>
-                </div>
-
-                <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="param-3" checked> Lowercase letters
-                    </label>
-                </div>
-
-                <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="param-4"> Uppercase letters
-                    </label>
-                </div>
-
-                <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="param-5"> Special characters
-                    </label>
-                </div>
-
-                <button type="button" class="btn btn-default" id="generator">Generate</button>
-              </form>
-         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div id="out"></div>
-        </div>
-    </div>
-</div>
+<h1>Strona główna</h1
